fix: more sonar issues